--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "blob-to-stream": "^1.0.3",
     "debug": "^4.1.1",
-    "ejs": "~2.3.3",
     "fluent-ffmpeg": "^2.1.2",
     "koa": "^2.7.0",
     "koa-body": "^4.1.1",
@@ -31,6 +30,7 @@
     "node-media-server": "^2.1.6"
   },
   "devDependencies": {
+    "ejs": "^2.3.4",
     "node-ffmpeg": "0.0.0",
     "nodemon": "^1.19.1"
   }
