--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "koa-views": "^6.2.0",
     "koa-websocket": "^6.0.0",
     "koa2-cors": "^2.0.6",
-    "multer": "^1.4.2",
-    "node-media-server": "^2.1.6"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
-    "ejs": "^2.3.4",
+    "ejs": "^2.5.5",
     "node-ffmpeg": "0.0.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "node-media-server": "^2.1.6"
   }
 }
