--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "blob-to-stream": "^1.0.3",
     "debug": "^4.1.1",
     "fluent-ffmpeg": "^2.1.2",
+    "flv.js": "^1.5.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
@@ -26,7 +28,8 @@
     "koa-views": "^6.2.0",
     "koa-websocket": "^6.0.0",
     "koa2-cors": "^2.0.6",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "video-rtp": "^0.1.5"
   },
   "devDependencies": {
     "ejs": "^2.5.5",
